--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #108215; }
+  background: #f19b0a; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #fa5f6c; }
+  background: #47d312; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #283eeb; }
+  background: #48749c; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #a14295; }
+  background: #c9566b; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #2cbeb9; }
+  background: #a27dbc; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #be4e76; }
+  background: #8376a6; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #bfbfb4; }
+  background: #a2990d; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #d3f212; }
+  background: #307510; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #2036a9; }
+  background: #3c7462; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #9e04ca; }
+  background: #04f13e; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #5be33d; }
+  background: #c17551; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #8cf239; }
+  background: #338954; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #a6042a; }
+  background: #90c5a4; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #acaef5; }
+  background: #5669bb; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #3c210f; }
+  background: #438aeb; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #5daea0; }
+  background: #573382; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #6e6867; }
+  background: #d0bdaa; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #4ae7f7; }
+  background: #b32e1b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #48bccd; }
+  background: #9a20c3; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #411aa5; }
+  background: #c9d850; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d95673; }
+  background: #eb019f; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #bf29ae; }
+  background: #f018ee; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #68f2f1; }
+  background: #20ff97; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #54011c; }
+  background: #494e6e; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #787229; }
+  background: #6e9caf; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #435b99; }
+  background: #1e0e64; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a2a855; }
+  background: #52eeb1; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #a494c5; }
+  background: #1f8b2c; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #6ae754; }
+  background: #4b7712; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #aba9a5; }
+  background: #6dbce0; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #510d02; }
+  background: #04adf2; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #778824; }
+  background: #0c1758; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #e73253; }
+  background: #e8476e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #5801be; }
+  background: #ee2604; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #739816; }
+  background: #311f40; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #4d418c; }
+  background: #b69817; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #2336cf; }
+  background: #0c5db4; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #9efdef; }
+  background: #4dd11c; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #6e3d4a; }
+  background: #cd5a90; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #7f4fae; }
+  background: #ecdc44; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d0c4a6; }
+  background: #130ddd; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #34bb6a; }
+  background: #0ea4fe; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #2671ea; }
+  background: #62655a; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #afd66f; }
+  background: #59fd4b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #c0a905; }
+  background: #5eadd6; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #eabe77; }
+  background: #f62489; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #7c01b0; }
+  background: #35baaa; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #6e8202; }
+  background: #d732a6; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #a2d16c; }
+  background: #8ff283; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a18df8; }
+  background: #2fb3a4; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #534656; }
+  background: #2dd765; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #7a3a9e; }
+  background: #25efab; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #cbc20b; }
+  background: #fce2e6; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #20a531; }
+  background: #1c6c63; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #8b6ffc; }
+  background: #19c1af; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #cf764b; }
+  background: #f5b478; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #3b37a4; }
+  background: #b12a2d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #6ae3f8; }
+  background: #31b8b2; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #03c4db; }
+  background: #5dce67; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #47870d; }
+  background: #fd135f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #7c1bd6; }
+  background: #e89d8c; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #b605f3; }
+  background: #877d47; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #dded52; }
+  background: #fc7b51; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #9cf85f; }
+  background: #83d139; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c0f30b; }
+  background: #7d37e0; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #f13a08; }
+  background: #c5b3bb; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #bbd8e7; }
+  background: #6a0bcd; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #ada831; }
+  background: #9ea0c1; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #69bb91; }
+  background: #fb61c9; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #932185; }
+  background: #56c705; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #d969ab; }
+  background: #fdc5be; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #1c2916; }
+  background: #842cfa; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #6ceb9a; }
+  background: #f44739; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #9bf4d3; }
+  background: #b82082; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #67b069; }
+  background: #3078bf; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #030495; }
+  background: #c836de; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #90fa3f; }
+  background: #1b0451; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #4bfa58; }
+  background: #de2e54; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #bc78db; }
+  background: #2a5f9f; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #f7e609; }
+  background: #1842a4; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #87b257; }
+  background: #7f7a54; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #0fa931; }
+  background: #6283b0; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #23cf4a; }
+  background: #31111e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #cdf23d; }
+  background: #7fa63d; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #77b750; }
+  background: #d541b1; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #163bf2; }
+  background: #1ba323; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #509409; }
+  background: #cbaf63; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #939bcd; }
+  background: #6f7f0c; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #2c02c4; }
+  background: #d788cf; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #8268da; }
+  background: #eaefcf; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #780302; }
+  background: #38c363; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #06f022; }
+  background: #c13f2c; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #2b8095; }
+  background: #4af2a2; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #9da9a6; }
+  background: #fdd06b; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #393e9b; }
+  background: #cb14f5; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #3c580d; }
+  background: #5f3e17; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #cbf997; }
+  background: #4974b5; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #259a56; }
+  background: #bc1c1f; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #a214b4; }
+  background: #f02950; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #0e90af; }
+  background: #cea01c; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9337,7 +9337,7 @@ th {
 .theme-btn {
   padding: 10px 22px;
   font-size: 16px;
-  background: #a57dff;
+  background: #776FFF;
   border: 0px;
   color: white; }
   .theme-btn:hover {
@@ -10425,10 +10425,7 @@ button {
 button {
   -webkit-appearance: none;
   -moz-appearance: none;
-  appearance: none;
-  -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2); }
+  appearance: none; }
 
 .table-pagination {
   background: none;
@@ -10448,12 +10445,9 @@ a {
     color: #776FFF; }
 
 .graydient-secondary-btn {
-  background-image: linear-gradient(to right bottom, #5e5e5e, #565656, #4f4e4f, #484747, #413f3f); }
+  background: #413f3f; }
   .graydient-secondary-btn:hover {
-    background-image: linear-gradient(to right bottom, #6d6d6d, #5a5a5a, #616061, #484848, #5d5d5d); }
-
-.graydient-primary-btn {
-  background-image: linear-gradient(to right bottom, #a57dff, #9b79ff, #9076ff, #8472ff, #776fff); }
+    background: #5e5e5e; }
 
 .cancel-btn {
   background: transparent;
