--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2235,7 +2235,7 @@ th {
 .theme-btn {
   padding: 10px 22px;
   font-size: 16px;
-  background: #a57dff;
+  background: #776FFF;
   border: 0px;
   color: white;
 
