--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -123,9 +123,9 @@ button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
+  // -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
+  // -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
+  // box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
 
 }
 
@@ -160,16 +160,18 @@ a {
 
 
 .graydient-secondary-btn {
-  background-image: linear-gradient(to right bottom, #5e5e5e, #565656, #4f4e4f, #484747, #413f3f);
+  // background-image: linear-gradient(to right bottom, #5e5e5e, #565656, #4f4e4f, #484747, #413f3f);
+  background: #413f3f;
 
   &:hover {
-    background-image: linear-gradient(to right bottom, #6d6d6d, #5a5a5a, #616061, #484848, #5d5d5d);
+    // background-image: linear-gradient(to right bottom, #6d6d6d, #5a5a5a, #616061, #484848, #5d5d5d);
+    background: #5e5e5e;
   }
 
 }
 
 .graydient-primary-btn {
-  background-image: linear-gradient(to right bottom, #a57dff, #9b79ff, #9076ff, #8472ff, #776fff);
+  // background-image: linear-gradient(to right bottom, #a57dff, #9b79ff, #9076ff, #8472ff, #776fff);
 }
 
 .cancel-btn {
