--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f19b0a; }
+  background: #98ee6b; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #47d312; }
+  background: #3badea; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #48749c; }
+  background: #14a3ba; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #c9566b; }
+  background: #fc9f54; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #a27dbc; }
+  background: #afaaa7; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #8376a6; }
+  background: #3a07c6; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #a2990d; }
+  background: #b0e023; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #307510; }
+  background: #a2d227; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #3c7462; }
+  background: #913f22; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #04f13e; }
+  background: #c3663e; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #c17551; }
+  background: #6ea734; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #338954; }
+  background: #5560fb; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #90c5a4; }
+  background: #87e889; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #5669bb; }
+  background: #19181e; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #438aeb; }
+  background: #355c92; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #573382; }
+  background: #6ec35d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #d0bdaa; }
+  background: #18d4a1; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #b32e1b; }
+  background: #eefcd5; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #9a20c3; }
+  background: #492423; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #c9d850; }
+  background: #7c96d9; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #eb019f; }
+  background: #37ec67; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #f018ee; }
+  background: #20cd18; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #20ff97; }
+  background: #4834c3; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #494e6e; }
+  background: #f05f39; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #6e9caf; }
+  background: #dd8033; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #1e0e64; }
+  background: #9aa2d1; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #52eeb1; }
+  background: #e15273; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #1f8b2c; }
+  background: #2b26b0; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #4b7712; }
+  background: #297f40; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #6dbce0; }
+  background: #1bd4aa; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #04adf2; }
+  background: #48be6d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #0c1758; }
+  background: #976119; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #e8476e; }
+  background: #6990da; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #ee2604; }
+  background: #1270b0; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #311f40; }
+  background: #6d5403; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #b69817; }
+  background: #2af951; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #0c5db4; }
+  background: #51ce3c; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #4dd11c; }
+  background: #5f4083; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #cd5a90; }
+  background: #bc2ef2; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #ecdc44; }
+  background: #11486d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #130ddd; }
+  background: #bc54c4; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #0ea4fe; }
+  background: #cc3677; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #62655a; }
+  background: #cffe39; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #59fd4b; }
+  background: #7820f5; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #5eadd6; }
+  background: #c239a5; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #f62489; }
+  background: #27723d; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #35baaa; }
+  background: #6c957b; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d732a6; }
+  background: #310fa5; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #8ff283; }
+  background: #aab3c3; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2fb3a4; }
+  background: #eedbb0; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #2dd765; }
+  background: #8d2244; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #25efab; }
+  background: #bf0343; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #fce2e6; }
+  background: #f746a0; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #1c6c63; }
+  background: #0b7b5c; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #19c1af; }
+  background: #13d3e4; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #f5b478; }
+  background: #896bd1; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #b12a2d; }
+  background: #96dcfd; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #31b8b2; }
+  background: #52b8c2; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #5dce67; }
+  background: #8e6a5c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #fd135f; }
+  background: #82331d; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #e89d8c; }
+  background: #73babd; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #877d47; }
+  background: #766f5b; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #fc7b51; }
+  background: #8ab130; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #83d139; }
+  background: #b03598; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #7d37e0; }
+  background: #1b39d1; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #c5b3bb; }
+  background: #7065de; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #6a0bcd; }
+  background: #78f62f; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #9ea0c1; }
+  background: #34dec4; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #fb61c9; }
+  background: #4bd072; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #56c705; }
+  background: #272fbb; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #fdc5be; }
+  background: #deff8f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #842cfa; }
+  background: #12d1a6; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #f44739; }
+  background: #61cfbb; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #b82082; }
+  background: #d54366; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #3078bf; }
+  background: #b26bf8; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #c836de; }
+  background: #da8d6a; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #1b0451; }
+  background: #d408b1; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #de2e54; }
+  background: #f97965; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #2a5f9f; }
+  background: #557c4b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #1842a4; }
+  background: #86e71f; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #7f7a54; }
+  background: #58c726; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #6283b0; }
+  background: #b33f1c; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #31111e; }
+  background: #3c3980; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #7fa63d; }
+  background: #de74cb; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #d541b1; }
+  background: #2303a3; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #1ba323; }
+  background: #c808fe; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #cbaf63; }
+  background: #255805; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #6f7f0c; }
+  background: #4b1aa1; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #d788cf; }
+  background: #768469; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #eaefcf; }
+  background: #b1d977; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #38c363; }
+  background: #2cd489; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c13f2c; }
+  background: #e7d858; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #4af2a2; }
+  background: #c95fc0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #fdd06b; }
+  background: #2c8b65; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #cb14f5; }
+  background: #b151c4; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #5f3e17; }
+  background: #b7c6df; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #4974b5; }
+  background: #a1d0af; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #bc1c1f; }
+  background: #9d8d25; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #f02950; }
+  background: #9fba20; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #cea01c; }
+  background: #2c42dc; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11514,6 +11514,9 @@ input:checked + .sliders:before {
   height: 10px;
   margin-left: 6px; }
 
+.orange-c {
+  background: #FF8A5B !important; }
+
 .table-icon {
   font-size: 20px;
   display: flex;
@@ -12866,6 +12869,28 @@ table .parent-row,
 
 .max-small-width-modal {
   max-width: 452px !important; }
+
+.new-search-bar-wrapper {
+  display: flex;
+  flex-direction: row !important;
+  margin-top: 10px; }
+  .new-search-bar-wrapper .search-right-bar {
+    width: 250px;
+    position: relative; }
+    .new-search-bar-wrapper .search-right-bar select {
+      -webkit-appearance: none !important;
+      -moz-appearance: none !important;
+      appearance: none !important;
+      background-image: url(../images/select-dropdwon-icon.png);
+      background-repeat: no-repeat;
+      background-position-x: 94%;
+      background-position-y: 18px;
+      padding: 10px;
+      height: 40px;
+      margin-right: 15px;
+      color: #000;
+      width: 100%;
+      border: 0px solid #000; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
