--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -675,6 +675,10 @@ input:checked+.sliders:before {
   margin-left: 6px;
 }
 
+.orange-c {
+  background: #FF8A5B !important;
+}
+
 .table-icon {
   font-size: 20px;
   display: flex;
@@ -2562,4 +2566,32 @@ table .parent-row,
 
 .max-small-width-modal {
   max-width: 452px !important;
+}
+
+.new-search-bar-wrapper {
+  display: flex;
+  flex-direction: row !important;
+  margin-top: 10px;
+
+  .search-right-bar {
+    width: 250px;
+    position: relative;
+
+    select {
+      -webkit-appearance: none !important;
+      -moz-appearance: none !important;
+      appearance: none !important;
+      background-image: url(../images/select-dropdwon-icon.png);
+      background-repeat: no-repeat;
+      background-position-x: 94%;
+      background-position-y: 18px;
+      padding: 10px;
+      height: 40px;
+      margin-right: 15px;
+      color: #000;
+      width: 100%;
+      border: 0px solid #000;
+    }
+  }
+
 }
